# 3d_annotation_tool

./: .gitignore
annotation-tool/: CMakeLists.txt  Makefile  package.xml  pappa-doc.txt  settlement_GP_bakup1.doc  ui_filtervaluesdialog.h  ui_initialmessagedialog.h  ui_mainwindow.h  ui_newobjectdialog.h  ui_selectobjectdialog.h
annotation-tool/icons/: icons.qrc
annotation-tool/src/: CMakeLists.txt  filtervaluesdialog.cpp  filtervaluesdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointcloudmodifier.cpp  selectobjectdialog.cpp  viewerinteractor.cpp
capture_feedback/: CMakeLists.txt  README.md  package.xml
capture_feedback/src/: main.cpp
rgbd_grabber/include/: rgbd_grabber.h
rgbd_grabber/src/: main.cpp  rgbd_grabber.cpp
